# libavtest-cpp

./: CMakeLists.txt  README.md
src/: main.cpp  video_writer.cpp  video_writer.h
